terraform/updated-xyzpoc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: xyzpoc
    meta.helm.sh/release-namespace: xyzpoc
  creationTimestamp: "2024-03-01T00:42:18Z"
  generation: 2
  labels:
    app.kubernetes.io/managed-by: Helm
  name: xyzpoc-ingress
  namespace: xyzpoc
  resourceVersion: "11384"
  uid: f2b1fc91-4aad-4a65-b9a7-9491fadfad3f
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: xyzpoc
            port:
              number: 80
        path: /test
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: a279392f93abe4944b53a662a62afb45-611109965.us-west-2.elb.amazonaws.com
